# Antigravity-BirdBridge-Claude

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx
dashboard/src/components/: AccountCard.tsx  FlowTable.tsx  QuotaBar.tsx  ServicePanel.tsx  StatsPanel.tsx
dashboard/src/hooks/: useAccountLimits.ts  useRuntimeData.ts
dashboard/src/types/: index.ts
desktop/: claude-config-fix.js  claude-config-status.js  proxy-daemon.js
src/: account-manager.js  cloudcode-client.js  constants.js  flow-monitor.js  index.js  server.js
src/providers/: provider-registry.js
src/services/: backup-service.js  claude-config.js  config-service.js
src/utils/: openai-adapter.js
tauri/: package-lock.json  package.json
tauri/scripts/: sync-backend.mjs
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: main.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: main.rs
tauri/ui/: index.html  main.js  styles.css
